added weather api

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-
+    <p id="test">wapojdwapjd</p>
+    <script src="index.js"></script>
 </body>
-<script src="index.js"></script>
 
 </html>
