--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       </thead>
     </table>
     <ul id="info"></ul>
+    <ul id="weather"></ul>
     <script src="index.js"></script>
   </body>
 </html>
