--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </tr>
       </thead>
     </table>
-    <ul id="info"></ul>
+    <table id="info"></table>
     <ul id="weather"></ul>
     <script src="index.js"></script>
   </body>
