--- a/index.html
+++ b/index.html
@@ -4,21 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
-
     <title>Document</title>
   </head>
 
   <body>
-    <table id="eventTable">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Location</th>
-        </tr>
-      </thead>
-    </table>
-    <table id="info"></table>
-    <ul id="weather"></ul>
+    <div class="container">
+      <!-- Left Panel: Event Table -->
+      <div class="left-panel">
+        <table id="eventTable">
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Location</th>
+            </tr>
+          </thead>
+          <tbody>
+            <!-- Event rows will be added here dynamically -->
+          </tbody>
+        </table>
+      </div>
+
+      <!-- Right Panel: Event Details and Weather -->
+      <div class="right-panel">
+        <table id="info">
+          <!-- Event details will be inserted here dynamically -->
+        </table>
+        <ul id="weather">
+          <!-- Weather information will be inserted here dynamically -->
+        </ul>
+      </div>
+    </div>
+
     <script src="index.js"></script>
   </body>
 </html>
