Final Styling and comments

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   </head>
 
   <body>
-    <div class="container">
-      <!-- Left Panel: Event Table -->
+    <header>
+      <h1>COMPX322-A1 - Eli Murray</h1>
+    </header>
+    <div id="container">
       <div class="left-panel">
         <table id="eventTable">
           <thead>
@@ -19,21 +21,20 @@
             </tr>
           </thead>
           <tbody>
-            <!-- Event rows will be added here dynamically -->
           </tbody>
         </table>
       </div>
 
-      <!-- Right Panel: Event Details and Weather -->
       <div class="right-panel">
         <table id="info">
-          <!-- Event details will be inserted here dynamically -->
         </table>
         <ul id="weather">
-          <!-- Weather information will be inserted here dynamically -->
         </ul>
+        <div id="save-buttons">
+
+        </div>
       </div>
-    </div>
+    
 
     <script src="index.js"></script>
   </body>
