refreshes table on save

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <th>Location</th>
             </tr>
           </thead>
-          <tbody>
+          <tbody id="eventTableBody">
           </tbody>
         </table>
       </div>
