--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <header>
-      <h1>COMPX322-A1 - Eli Murray</h1>
+      <h1>COMPX322-A1</h1>
     </header>
     <div id="container">
       <div class="left-panel">
